# RoboControl

./: .gitignore  CMakeLists.txt  README.md  diagram.json  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.ci.dynamic_buffer  sdkconfig.defaults  sdkconfig.old  wokwi.toml
main/: Bakalarka_RoboControl.code-workspace  CMakeLists.txt  Kconfig.projbuild  config.h  core_config.h  idf_component.yml  main.c  robot_io.c  robot_io.h  wifi_servo_server.c  wifi_servo_server.h
main/can_communication/: can_communication.c  can_communication.h
main/cmd_control/: cmd_control.c  cmd_control.h
main/gcode/: gcode.c  gcode.h
main/robot_io/: robot_io.c  robot_io.h
main/rt_stats/: rt_stats.c  rt_stats.h
main/status_led/: status_led.c  status_led.h
main/uart_receive/: uart_receive.c  uart_receive.h
main/wifi_server/: wifi_server.c  wifi_server.h
spiffs/data/: square.gcode  test.gcode
spiffs/web/: settings.html  spage.html  style.css
